code with Hyper-parameter tuning and log and as well model log and register

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -5509,6 +5509,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28a56cd1",
+   "metadata": {},
+   "source": [
+    "### Hyperparameter Tunning\n",
+    "Improve model performance using hyperparameter tuning, use techniques \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1a665318",
