updating the main fuctions

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -5611,7 +5611,8 @@
    "id": "5eeb5231",
    "metadata": {},
    "source": [
-    "# Model Deployment and Continuous Integration"
+    "# Model Deployment and Continuous Integration\n",
+    "To package the trained model into a containerized API and set up a CI/CD pipeline to automate testing and ensure code quality."
    ]
   },
   {
